--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,11 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_pro: ^1.0.0
+  http: ^0.13.3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
